--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
     "name": "horde/token",
-    "description": "Horde Token API",
+    "description": "Tokens library",
     "type": "library",
-    "homepage": "https://pear.horde.org",
+    "homepage": "https://www.horde.org/libraries/Horde_Token",
     "license": "LGPL-2.1",
     "authors": [
-        {
-            "name": "Chuck Hagenbuch",
-            "email": "chuck@horde.org",
-            "role": "lead"
-        },
         {
             "name": "Gunnar Wrobel",
             "email": "p@rdus.de",
             "role": "lead"
+        },
+        {
+            "name": "Chuck Hagenbuch",
+            "email": "chuck@horde.org",
+            "role": "lead"
         }
     ],
     "version": "2.0.10",
-    "time": "2016-03-21",
+    "time": "2017-11-14",
     "repositories": [
         {
             "type": "pear",
