--- a/.horde.yml
+++ b/.horde.yml
@@ -2,8 +2,8 @@
 id: Token
 name: Token
 full: Tokens library
-description: |
-  The Horde_Token:: class provides a common abstracted interface into the various token generation mediums. It also includes all of the functions for retrieving, storing, and checking tokens.
+description: |-
+  A library that provides a common abstracted interface into the various token generation mediums. It also includes all of the functions for retrieving, storing, and checking tokens.
 list: dev
 type: library
 homepage: https://www.horde.org/libraries/Horde_Token
