--- a/.horde.yml
+++ b/.horde.yml
@@ -33,16 +33,16 @@ license:
   uri: http://www.horde.org/licenses/lgpl21
 dependencies:
   required:
-    php: ^5.3 || ^7
-    pear:
-      pear.horde.org/Horde_Exception: ^2
-      pear.horde.org/Horde_Translation: ^2.2
-      pear.horde.org/Horde_Url: ^2
-      pear.horde.org/Horde_Util: ^2
+    php: ^7
+    composer:
+      horde/exception: ^3
+      horde/translation: ^3
+      horde/url: ^3
+      horde/util: ^3
     ext:
       hash: '*'
   optional:
-    pear:
-      pear.horde.org/Horde_Db: ^2
-      pear.horde.org/Horde_Mongo: ^1
-      pear.horde.org/Horde_Test: ^2.1
+    composer:
+      horde/db: ^3
+      horde/mongo: ^2
+      horde/test: ^3
