--- a/composer.json
+++ b/composer.json
@@ -26,17 +26,17 @@
     ],
     "require": {
         "horde/horde-installer-plugin": "*",
-        "php": "^5.3 || ^7",
-        "horde/exception": "^2",
-        "horde/translation": "^2.2",
-        "horde/url": "^2",
-        "horde/util": "^2",
+        "php": "^7",
+        "horde/exception": "^3",
+        "horde/translation": "^3",
+        "horde/url": "^3",
+        "horde/util": "^3",
         "ext-hash": "*"
     },
     "suggest": {
-        "horde/db": "^2",
-        "horde/mongo": "^1",
-        "horde/test": "^2.1"
+        "horde/db": "^3",
+        "horde/mongo": "^2",
+        "horde/test": "^3"
     },
     "autoload": {
         "psr-0": {
