--- a/composer.json
+++ b/composer.json
@@ -18,28 +18,20 @@
     ],
     "version": "2.0.10",
     "time": "2017-11-11",
-    "repositories": [
-        {
-            "type": "pear",
-            "url": "https://pear.horde.org"
-        }
-    ],
     "require": {
         "php": "^5.3 || ^7",
-        "pear-pear.horde.org/Horde_Exception": "^2",
-        "pear-pear.horde.org/Horde_Translation": "^2.2",
-        "pear-pear.horde.org/Horde_Url": "^2",
-        "pear-pear.horde.org/Horde_Util": "^2",
+        "horde/exception": "^2",
+        "horde/translation": "^2.2",
+        "horde/url": "^2",
+        "horde/util": "^2",
         "ext-hash": "*"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Db": "^2",
-        "pear-pear.horde.org/Horde_Mongo": "^1",
-        "pear-pear.horde.org/Horde_Test": "^2.1"
+        "horde/db": "^2",
+        "horde/mongo": "^1",
+        "horde/test": "^2.1"
     },
     "replace": {
-        "pear-pear.horde.org/Horde_Token": "2.*",
-        "pear-horde/Horde_Token": "2.*"
     },
     "autoload": {
         "psr-0": {
